# ontologysim

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  tox.ini
docs/source/: index.rst
docs/source/configs/: ini_file.rst
docs/source/production_simulation/: controller.rst  deep_dive.rst  logger.rst
docs/source/tutorial/: installation.rst
example/: Main.py  MainPlot.py
example/config/: plot_log.ini
example/config/for_docu/: owl_config.ini
example/controller/: MachineController_FIFO2.py
example/create_pnml/: MainPetriNet.py  petri_net.py
frontend/: .env.sample  Dockerfile  README.md  index.html  package-lock.json  package.json  sws-config.toml
frontend/src/: index.jsx
frontend/src/actions/: axiosInstance.js
frontend/src/style/: theme.scss
frontend/src/views/: DownloadSimulation.jsx  Home.jsx  KPI.jsx
ontologysim/: __init__.py  __main__.py
ontologysim/Flask/: FlaskApp.py  FlaskMain.py
ontologysim/Flask/Actions/: APIAction.py  CommentIdAction.py  ComponentAction.py  GetIdsAction.py  ResetBEAction.py  TestAction.py
ontologysim/Flask/instance/: config.py
ontologysim/ProductionSimulation/analyse/: TimeAnalyse.py
ontologysim/ProductionSimulation/controller/: __init__.py  machine.py  order_release.py  service.py
ontologysim/ProductionSimulation/database/: CreateDatabase.py  DataBase.py
ontologysim/ProductionSimulation/init/: Initializer.py  TransformLoggerIni.py  TransformProductionIni.py  petrinet_generator.py
ontologysim/ProductionSimulation/logger/: Enum_Logger.py  EventLogger.py  Logger.py  MachineLogger.py  ProductAnalyseLogger.py  QueueFillLevelLogger.py  SimLogger.py  SubLogger.py  TransporterDistributionLogger.py  TransporterLocationLogger.py  TransporterLogger.py
ontologysim/ProductionSimulation/plot/: Log_plot.py
ontologysim/ProductionSimulation/sim/: Central.py  Defect.py  Distribution.py  Enum.py  Event.py  Location.py  Machine.py  OrderRelease.py  Position.py  ProdProcess.py  Product.py  ProductType.py  Queue.py  SimCore.py  SubProduct.py  Task.py  Transporter.py
ontologysim/ProductionSimulation/utilities/: __init__.py  event.py  event_utilities.py  init.py  path.py  (+4 more)
tests/: TestMain.py  test_apis.py  test_database_creation.py  test_main.py
tests/processes/: MainProcess.py
tests/testCases/: CrateDataBaseTest.py  FlaskAPITest.py  MainTest.py  MultipleRunTests.py
tests/util/: ControllerGenerator.py  Generator.py  LoggerGenerator.py  OwlGenerator.py  ProductionGenerator.py  Timeout.py
(+105 files in other folders)
